# Engine0

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ProjectOptions.cmake  README.md
.github/workflows/: build.yml
DockerImages/djgpp-12/: Dockerfile
TO_DELETE_platforms/: CMakeLists.txt
TO_DELETE_platforms/backend_includes/: Platform.hpp
TO_DELETE_platforms/dos/: CMakeLists.txt  DosMode12.cpp  DosMode12.hpp  main.cpp
TO_DELETE_platforms/osx/: CMakeLists.txt  E0View.mm  main.mm
TO_DELETE_platforms/sdl/: CMakeLists.txt  SdlBitmap.cpp  SdlBitmap.hpp  StdFile.cpp  StdFile.hpp  main.cpp
build-scripts/: i386-pc-msdosdjgpp.cmake
cmake/: Cache.cmake  CompilerWarnings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
engine/: CMakeLists.txt
engine/include/: Engine.hpp
engine/include/Engine/: Action.hpp  ActionCategory.hpp  ActionInstance.hpp  Actor.hpp  ComponentRegistry.hpp  Config.hpp  DefaultBitmapHelpers.hpp  Engine.hpp  GameClock.hpp  Painter.hpp  Resource.hpp  ResourceLoader.hpp  ResourceManager.hpp  ResourcePtr.hpp  Stream.hpp  StreamFactory.hpp  World.hpp
engine/include/Engine/Detail/: Array.hpp  Property.hpp  PropertySet.hpp  StringFormat.hpp  TypeId.hpp
engine/include/Engine/GUI/: LabelWidget.hpp  Widget.hpp  WorldWidget.hpp
engine/include/Engine/Logging/: Logger.hpp  SourceLocation.hpp
engine/include/Engine/Math/: AABB.hpp  Color.hpp  Math.hpp  Rect.hpp  Vec2D.hpp  sqrt.hpp
engine/include/Engine/Platform/: DrawableSurface.hpp  InputEvent.hpp  InputSystem.hpp  Painter.hpp  ResourceLoader.hpp  ResourceLoaderOptions.hpp  ResourceManager.hpp  Stream.hpp  StreamFactory.hpp
engine/include/Engine/Resource/: Bitmap.hpp  DrawableResource.hpp  Font.hpp  Map.hpp  Palette.hpp  Sprite.hpp  Tileset.hpp
engine/include/Engine/Scripting/: BoxedCast.hpp  BoxedValue.hpp  ProxyFunction.hpp  ScriptEngine.hpp  TypeInfo.hpp
engine/include/Engine/Scripting/detail/: CastHelpers.hpp
engine/src/: BitmapData.cpp  BitmapData.hpp  Bitmap_Generic.cpp  DrawableSurface.cpp  Engine.cpp  EngineData.cpp  EngineData.hpp  EngineError.cpp  EngineError.hpp  IniParser.cpp  IniParser.hpp  InputEvent.cpp  InternalActions.cpp  InternalActions.hpp  LoadedWorld.cpp  LoadedWorld.hpp  Logger.cpp  Map.cpp  Painter.cpp  Painter_Generic.cpp  Painter_PaintDevice.cpp  Painter_PaintDevice.hpp  Painter_TargetBitmap.cpp  Platform.cpp  Platform.hpp  PrivateInclude.hpp  ResourceManager.cpp  StreamFactory.cpp  Tileset.cpp  TranslatableText.cpp  TranslatableText.hpp  World.cpp  bootstrap.cpp
engine/src/Backend_Apple/: ApplePrivateInclude.h  Apple_KeyboardSystem.h  Apple_KeyboardSystem.mm  CMakeLists.txt  CreateSink.cpp  MetalSurface.h  MetalSurface.mm  OpenStream.cpp  PlatformName.cpp  PlatformThread.cpp  main.mm
engine/src/Backend_DOS/: CMakeLists.txt  CreateSink.cpp  OSType.cpp  OSType.hpp  PlatformThread.cpp  PlatformThread.hpp  StdFile.cpp  StdFile.hpp  dos_platform.cpp  gdbstub.h  interrupt.cpp  interrupt.hpp  keyboard.cpp  keyboard.hpp  memory.cpp  memory.hpp  mouse.cpp  mouse.h  timer.cpp  timer.hpp
engine/src/Backend_DOS/Video/: CMakeLists.txt  Ega.hpp  PlanarPainter.cpp  PlanarPainter.hpp  PlanarSurfaceHw.cpp  PlanarSurfaceHw.hpp  VGA_12h.hpp
engine/src/Backend_SDL/: Bitmap.cpp  Bitmap.hpp  CMakeLists.txt  CreateSink.cpp  Logger.cpp  Logger.h  SDL_KeyboardSystem.cpp  SDL_KeyboardSystem.h  StdFile.hpp  main.cpp  string_2_wstring.hpp
engine/src/GUI/: Font.cpp  LabelWidget.cpp  Widget.cpp  WorldWidget.cpp
engine/src/Loaders/: BitmapLoader.cpp  BitmapLoader.hpp  PaletteLoader.cpp  PaletteLoader.h  PngLoader.cpp  PngLoader.hpp  SpriteGifLoader.cpp  SpriteGifLoader.hpp  WorldLoader.cpp  WorldLoader.hpp
engine/src/Resource/: ResourceLoader.cpp  ResourceLoader.hpp  ResourceManager.cpp  ResourceManager.hpp  Sprite.cpp
engine/src/ScriptEngine/: ScriptEngine.cpp
engine/src/ScriptEngine/Lua/: BoxedToLuaConverter.cpp  LuaProxyFunction.cpp  LuaScriptEngine.cpp  LuaScriptEngine.hpp  LuaToBoxedConverter.cpp  LuaToBoxedConverter.hpp  LuaToNativeTrampoline.cpp  NamedFunction.cpp  RefFunction.cpp  UserDataHolder.cpp
example/: CMakeLists.txt
example/res/: agahnim.ini  game.ini  pal.ini  samset.ini  wh1.ini
example/resources/: game.ini
example/src/: ExampleGame.cpp  ExampleGame.hpp  main.cpp
include/: Engine.hpp
include/Engine/: Action.hpp  ActionCategory.hpp  ActionInstance.hpp  Actor.hpp  Binding.hpp  ComponentRegistry.hpp  Engine.hpp  InputEvent.hpp  InputSystem.hpp  Resource.hpp  ResourcePtr.hpp  Stream.hpp  World.hpp
include/Engine/Detail/: Property.hpp
include/Engine/Logging/: SourceLocation.hpp
include/Engine/Math/: Color.hpp  Rect.hpp  Vec2D.hpp
include/Engine/Resource/: Bitmap.hpp  Tileset.hpp
src/: Bitmap_Generic.cpp  Engine.cpp  IniParser.cpp  IniParser.hpp  LoadedWorld.cpp  LoadedWorld.hpp  Tileset.cpp  World.cpp
src/GUI/: Font.cpp
src/Loaders/: BitmapLoader.hpp  WorldLoader.cpp  WorldLoader.hpp
src/Resource/: ResourceLoader.hpp
tests/: CMakeLists.txt  test_action.cpp  test_blitting.cpp  test_engine.cpp  test_font.cpp  test_format.cpp  test_gifloader.cpp  test_map.cpp  test_no_palette.cpp  test_painter.cpp  test_sourcelocation.cpp  test_widget.cpp  test_world.cpp  tests.cpp  tests.hpp  tests_script.cpp
